# cppAssignments

./: .travis.yml  README.md
TafelOefening/: CMakeLists.txt  TafelOefening.pro  TafelOefening.pro.user.6f839cd  TafelOefening.pro.user.f942d24  main.cpp  makefile  question.cpp  question.h  session.cpp  session.h  table.cpp  table.h
cppAssignments/: cppAssignments.sln
cppAssignments/cppAssignments/: cppAssignments.vcxproj  cppAssignments.vcxproj.filters  readme.txt
